--- a/front-end/app/styles/_variables.scss
+++ b/front-end/app/styles/_variables.scss
@@ -20,3 +20,7 @@ $salad: #36AA7A;
 $royal: #2C47B2;
 
 $card-lg-padding: 25px;
+
+$desktop-navbar-height: 64px;
+
+$sidenav-width: 259px;
